-fixed layout issues with cart-dropdown

--- a/client/src/components/cart-item/cart-item.styles.scss
+++ b/client/src/components/cart-item/cart-item.styles.scss
@@ -1,8 +1,8 @@
 .cart-item {
   width: 100%;
   display: flex;
-  height: 80px;
-  margin-bottom: 15px;
+  height: 100px;
+  margin-bottom: 20px;
 
   img {
     width: 30%;
